W.6 - Finis avec modif immuabilité de StarCatalogue